# captchafox-solver

./: .gitignore  README.md  SECURITY.md  go.mod  main.go  pyproject.toml
captchafox/: attestation.go  attestation_template.json  client.go  encoding.go  pow.go  solver.go
cdp/: chrome.go  chrome_test.go  fetch.go  relay.go
mailcom/: client.go  config.go  register.go
scripts/: stress_test.py
src/captchafox_solver/: client.py  pow.py  solver.py
tests/: test_units.py
