[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captchafox-solver"
version = "0.1.0"
description = "A pure-Python CaptchaFox challenge solver (attestation replay, PoW, slide). For authorized security testing only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "3z" }]
keywords = ["captcha", "captchafox", "security", "bot-protection", "captcha-solver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31",
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
captchafox-solver = "captchafox_solver.cli:main"

[project.urls]
Homepage = "https://github.com/3z/captchafox-solver"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
captchafox_solver = ["data/*.json"]
